objects/Recommendation.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ContextID__c</fullName>
        <description>This field is used to store the Context ID for the Recommendation that was made. It is passed as an input parameter to Flow or OmniScript on accept/reject of Recommendation.</description>
        <label>Context ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferCode__c</fullName>
        <description>This field is used to store the Product Code corresponding to a Product in the Catalog. The NBA Strategy will surface a Product based on main features of the product compared to usage and customer spend history, this field will allow us to map the Product to the correct Recommendation.</description>
        <label>Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Action</label>
        <referenceTo>vlocity_cmt__VlocityAction__c</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>vlocity_cmt__All_Recommendations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <columns>vlocity_cmt__VlocityActionId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recommendations</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>